correct alignment error in container-1

--- a/style.css
+++ b/style.css
@@ -11,18 +11,18 @@ body {
     color: #f9faf8;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
 }
 
 .logo {
     font-size: 24px;
-    font-weight: 700;
+    font-weight: 700; 
 }
 
 .logo-links {
     display: flex;
-    justify-content: space-between;
     align-items: baseline;
+    justify-content: space-around;
     margin-bottom: 48px;
 }
 
@@ -44,7 +44,7 @@ a {
 }
 
 .hero-content {
-    width: 400px;
+    width: 475px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -58,4 +58,20 @@ a {
 .hero-secondary-text {
     color: #e5e7eb;
     font-size: 18px;
+    margin-bottom: 12px;
+}
+
+.Sign-up {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border-style: none;
+    border-radius: 8px;
+    padding: 8px 32px;
+}
+
+.image-hold {
+    background-color: gray;
+    display: flex;
+    height: 200px;
+    width: 500px;
 }
